--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ dotenv==0.9.9
 exceptiongroup==1.3.0
 Flask==3.1.1
 flask-cors==6.0.1
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -18,6 +19,7 @@ Jinja2==3.1.6
 jiter==0.10.0
 MarkupSafe==3.0.2
 openai==1.98.0
+packaging==25.0
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-dotenv==1.1.1
